--- a/public/src/bootstrap-icons/style.css
+++ b/public/src/bootstrap-icons/style.css
@@ -1,10 +1,6 @@
 @font-face {
   font-family: 'bootstrap';
-  src:  url('fonts/bootstrap.eot?o1e56f');
-  src:  url('fonts/bootstrap.eot?o1e56f#iefix') format('embedded-opentype'),
-    url('fonts/bootstrap.ttf?o1e56f') format('truetype'),
-    url('fonts/bootstrap.woff?o1e56f') format('woff'),
-    url('fonts/bootstrap.svg?o1e56f#bootstrap') format('svg');
+  src:  url('fonts/bootstrap.woff2?o1e56f') format('woff2');
   font-weight: normal;
   font-style: normal;
   font-display: block;
